--- a/blocked.html
+++ b/blocked.html
@@ -16,29 +16,28 @@
   <!-- Theme toggle -->
   <button class="theme-btn" id="themeBtn" title="Toggle theme">
     <span class="icon-sun">
-          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <circle cx="12" cy="12" r="4"/><path d="M12 2v2"/><path d="M12 20v2"/><path d="m4.93 4.93 1.41 1.41"/><path d="m17.66 17.66 1.41 1.41"/><path d="M2 12h2"/><path d="M20 12h2"/><path d="m6.34 17.66-1.41 1.41"/><path d="m19.07 4.93-1.41 1.41"/>
-          </svg>
-        </span>
-        
+      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <circle cx="12" cy="12" r="4"/><path d="M12 2v2"/><path d="M12 20v2"/><path d="m4.93 4.93 1.41 1.41"/><path d="m17.66 17.66 1.41 1.41"/><path d="M2 12h2"/><path d="M20 12h2"/><path d="m6.34 17.66-1.41 1.41"/><path d="m19.07 4.93-1.41 1.41"/>
+      </svg>
+    </span>
     <span class="icon-moon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
-          </svg>
-        </span>
+      <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
+      </svg>
+    </span>
     <span id="themeLabel">Light</span>
   </button>
 
   <div class="container">
     <div class="top-label">
       <span class="top-label-dot"></span>
-      BlockIt — Access Denied
+      BlockIt &ndash; Access Denied
     </div>
 
     <div class="block-icon-wrap">
       <div class="block-icon-ring"></div>
       <div class="block-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shield-icon lucide-shield"><path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"/></svg>
       </div>
     </div>
 
@@ -74,7 +73,7 @@
         </svg>
         Remove Block
       </button>
-      
+
       <!-- Break Time Section -->
       <div class="break-time-section" id="breakTimeSection">
         <div class="break-time-label">Or take a short break</div>
@@ -92,7 +91,7 @@
       <svg width="11" height="11" viewBox="0 0 11 11" fill="none">
         <path d="M1.5 5.5L4.5 8.5L9.5 2.5" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
       </svg>
-      <span>Unblocked — redirecting…</span>
+      <span id="successMsgText">Unblocked — redirecting&hellip;</span>
     </div>
 
     <div class="footer">
@@ -100,7 +99,7 @@
       <div class="footer-sep"></div>
       <span class="footer-text">MIT License</span>
       <div class="footer-sep"></div>
-      <span class="footer-text"><a href="https:github.com/Abdulaziz-hu/Blockit" target="_blank">Free & Open Source</a></span>
+      <span class="footer-text"><a href="https://github.com/Abdulaziz-hu/Blockit" target="_blank">Free &amp; Open Source</a></span>
     </div>
   </div>
 
