--- a/popup.html
+++ b/popup.html
@@ -10,36 +10,32 @@
 
   <!-- UPDATE BANNER -->
   <div class="update-banner" id="updateBanner">
-    <div class="update-icon">🎉</div>
+    <div class="update-icon">&#127881;</div>
     <div class="update-text">
       <div class="update-title">Update Available!</div>
-      <div class="update-version" id="updateVersion">v1.3.0 is ready</div>
+      <div class="update-version" id="updateVersion">v1.3.1 is ready</div>
     </div>
     <a class="update-link" id="updateLink" href="#" target="_blank">Update</a>
-    <button class="update-close" id="updateClose" title="Dismiss">×</button>
+    <button class="update-close" id="updateClose" title="Dismiss">&times;</button>
   </div>
 
   <!-- HEADER -->
   <div class="header">
     <div class="logo">
-      <!-- <div class="logo-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-text-icon lucide-file-text"><path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"/><path d="M14 2v5a1 1 0 0 0 1 1h5"/><path d="M10 9H8"/><path d="M16 13H8"/><path d="M16 17H8"/></svg>
-      </div> -->
       <span class="logo-name">Block<span>It</span></span>
     </div>
 
     <div class="header-right">
       <button class="settings-btn" id="settingsBtn" title="Settings">
-        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-settings-icon lucide-settings"><path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"/><circle cx="12" cy="12" r="3"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"/><circle cx="12" cy="12" r="3"/></svg>
       </button>
-      
+
       <button class="theme-btn" id="themeBtn" title="Toggle light / dark theme">
         <span class="icon-sun">
           <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <circle cx="12" cy="12" r="4"/><path d="M12 2v2"/><path d="M12 20v2"/><path d="m4.93 4.93 1.41 1.41"/><path d="m17.66 17.66 1.41 1.41"/><path d="M2 12h2"/><path d="M20 12h2"/><path d="m6.34 17.66-1.41 1.41"/><path d="m19.07 4.93-1.41 1.41"/>
           </svg>
         </span>
-
         <span class="icon-moon">
           <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
@@ -59,7 +55,7 @@
 
   <!-- PAUSED BANNER -->
   <div class="paused-banner" id="pausedBanner">
-    ⚠ blocking is paused — all sites are accessible
+    &#9888; blocking is paused — all sites are accessible
   </div>
 
   <!-- BLOCK CURRENT TAB -->
@@ -67,7 +63,7 @@
     <button id="blockCurrentBtn">
       <div class="btn-left">
         <span class="btn-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shield-icon lucide-shield"><path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"/></svg>
         </span>
         Block this site
       </div>
@@ -104,7 +100,7 @@
         autocomplete="off"
         spellcheck="false"
       />
-      <button class="search-clear" id="searchClear" title="Clear search" style="display:none">×</button>
+      <button class="search-clear" id="searchClear" title="Clear search" style="display:none">&times;</button>
     </div>
   </div>
 
@@ -118,7 +114,7 @@
 
   <!-- FOOTER -->
   <div class="footer">
-    <span class="footer-mit"><span>MIT</span> — Free & Open Source</span>
+    <span class="footer-mit"><span>MIT</span> — Free &amp; Open Source</span>
     <button class="clear-all-btn" id="clearAllBtn">Clear all</button>
   </div>
 
