--- a/privacy.html
+++ b/privacy.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy — BlockIt</title>
+  <title>Privacy Policy &ndash; BlockIt</title>
   <link rel="stylesheet" href="./static/css/privacy.css">
 </head>
 <body>
+
+  <div class="top-bar">
+
+    <button class="theme-btn" id="themeBtn" title="Toggle theme">
+      <span class="icon-sun">
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="12" cy="12" r="4"/><path d="M12 2v2"/><path d="M12 20v2"/><path d="m4.93 4.93 1.41 1.41"/><path d="m17.66 17.66 1.41 1.41"/><path d="M2 12h2"/><path d="M20 12h2"/><path d="m6.34 17.66-1.41 1.41"/><path d="m19.07 4.93-1.41 1.41"/>
+        </svg>
+      </span>
+      <span class="icon-moon">
+        <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
+        </svg>
+      </span>
+    </button>
+  </div>
 
   <div class="header">
     <h1>Privacy Policy</h1>
@@ -19,7 +35,7 @@
 
   <div class="intro">
     <p>
-      BlockIt ("we", "our", or "the extension") is committed to protecting your privacy. 
+      BlockIt (&ldquo;we&rdquo;, &ldquo;our&rdquo;, or &ldquo;the extension&rdquo;) is committed to protecting your privacy.
       This Privacy Policy explains how BlockIt handles your data.
     </p>
   </div>
@@ -44,16 +60,16 @@
     <div class="section-content">
       <p>All data is stored using:</p>
       <ul>
-        <li><strong>chrome.storage.local</strong> - Persistent local storage on your device</li>
-        <li><strong>chrome.storage.session</strong> - Temporary session storage (cleared when browser closes)</li>
+        <li><strong>chrome.storage.local</strong> — Persistent local storage on your device</li>
+        <li><strong>chrome.storage.session</strong> — Temporary session storage (cleared when browser closes)</li>
       </ul>
       <p>This data is:</p>
       <ul>
-        <li>✅ Stored only on your local device</li>
-        <li>✅ Never transmitted to any server</li>
-        <li>✅ Never shared with third parties</li>
-        <li>✅ Not synced across devices</li>
-        <li>✅ Completely under your control</li>
+        <li>&#10003; Stored only on your local device</li>
+        <li>&#10003; Never transmitted to any server</li>
+        <li>&#10003; Never shared with third parties</li>
+        <li>&#10003; Not synced across devices</li>
+        <li>&#10003; Completely under your control</li>
       </ul>
     </div>
   </div>
@@ -70,7 +86,7 @@
           <br>
           <span style="font-size: 13px; color: var(--text-muted);">Frequency: On install and once per day</span>
           <br>
-          <span style="font-size: 13px; color: var(--text-muted);">Data Sent: None - This is a public API call with no identifiable information</span>
+          <span style="font-size: 13px; color: var(--text-muted);">Data Sent: None — This is a public API call with no identifiable information</span>
         </li>
       </ul>
       <p><strong>No tracking, analytics, or telemetry of any kind.</strong></p>
@@ -81,12 +97,11 @@
     <h2 class="section-title">4. Permissions Explained</h2>
     <div class="section-content">
       <p>BlockIt requires the following Chrome permissions:</p>
-      
+
       <div class="permission-item">
         <div class="permission-name">declarativeNetRequest</div>
         <div class="permission-desc">
-          <strong>Why:</strong> To redirect blocked sites to the blocked page
-          <br>
+          <strong>Why:</strong> To redirect blocked sites to the blocked page<br>
           <strong>Usage:</strong> Creates blocking rules that run locally in your browser
         </div>
       </div>
@@ -94,8 +109,7 @@
       <div class="permission-item">
         <div class="permission-name">storage</div>
         <div class="permission-desc">
-          <strong>Why:</strong> To save your blocked sites list and preferences
-          <br>
+          <strong>Why:</strong> To save your blocked sites list and preferences<br>
           <strong>Usage:</strong> Stores data locally on your device only
         </div>
       </div>
@@ -103,17 +117,15 @@
       <div class="permission-item">
         <div class="permission-name">tabs</div>
         <div class="permission-desc">
-          <strong>Why:</strong> To block the current tab and redirect after unblocking
-          <br>
-          <strong>Usage:</strong> Reads current tab URL when you click "Block this site"
+          <strong>Why:</strong> To block the current tab and redirect after unblocking<br>
+          <strong>Usage:</strong> Reads current tab URL when you click &ldquo;Block this site&rdquo;
         </div>
       </div>
 
       <div class="permission-item">
         <div class="permission-name">activeTab</div>
         <div class="permission-desc">
-          <strong>Why:</strong> To interact with the currently active tab
-          <br>
+          <strong>Why:</strong> To interact with the currently active tab<br>
           <strong>Usage:</strong> Allows quick-blocking of the current page
         </div>
       </div>
@@ -121,8 +133,7 @@
       <div class="permission-item">
         <div class="permission-name">webNavigation</div>
         <div class="permission-desc">
-          <strong>Why:</strong> To detect when you navigate to a blocked site
-          <br>
+          <strong>Why:</strong> To detect when you navigate to a blocked site<br>
           <strong>Usage:</strong> Monitors navigation to apply blocking rules
         </div>
       </div>
@@ -130,14 +141,13 @@
       <div class="permission-item">
         <div class="permission-name">host: &lt;all_urls&gt;</div>
         <div class="permission-desc">
-          <strong>Why:</strong> To block any website you choose
-          <br>
+          <strong>Why:</strong> To block any website you choose<br>
           <strong>Usage:</strong> Allows blocking rules to work on all domains
         </div>
       </div>
 
       <p class="permission-note">
-        <strong>Important:</strong> These permissions are used exclusively for blocking functionality. 
+        <strong>Important:</strong> These permissions are used exclusively for blocking functionality.
         BlockIt does not read page content, access passwords, or collect browsing history.
       </p>
     </div>
@@ -156,8 +166,8 @@
     <div class="section-content">
       <p>You have complete control over your data:</p>
       <ul>
-        <li><strong>Delete individual sites:</strong> Click the ✕ button next to any site</li>
-        <li><strong>Clear all data:</strong> Settings → "Clear All Data" button</li>
+        <li><strong>Delete individual sites:</strong> Click the &times; button next to any site</li>
+        <li><strong>Clear all data:</strong> Settings &rarr; &ldquo;Clear All Data&rdquo; button</li>
         <li><strong>Uninstall extension:</strong> Removes all stored data automatically</li>
       </ul>
       <p>Since all data is stored locally, deleting the extension or clearing its data permanently removes everything.</p>
@@ -168,7 +178,7 @@
     <h2 class="section-title">7. Children's Privacy</h2>
     <div class="section-content">
       <p>
-        BlockIt does not collect any data from anyone, including children under 13. 
+        BlockIt does not collect any data from anyone, including children under 13.
         The extension can be safely used by people of all ages.
       </p>
     </div>
@@ -178,7 +188,7 @@
     <h2 class="section-title">8. Changes to This Policy</h2>
     <div class="section-content">
       <p>
-        If we make changes to this Privacy Policy, we will update the "Last Updated" date at the top. 
+        If we make changes to this Privacy Policy, we will update the &ldquo;Last Updated&rdquo; date at the top.
         Continued use of BlockIt after changes constitutes acceptance of the updated policy.
       </p>
     </div>
@@ -192,7 +202,7 @@
       </p>
       <p class="github-link">
         <a href="https://github.com/Abdulaziz-hu/blockit" target="_blank">
-          View Source Code on GitHub →
+          View Source Code on GitHub &rarr;
         </a>
       </p>
     </div>
@@ -204,10 +214,8 @@
       <p>Questions about this Privacy Policy? Contact us:</p>
       <ul>
         <li>
-          <strong>GitHub Issues:</strong> 
-          <a href="https://github.com/Abdulaziz-hu/blockit/issues" target="_blank">
-            Report an Issue
-          </a>
+          <strong>GitHub Issues:</strong>
+          <a href="https://github.com/Abdulaziz-hu/blockit/issues" target="_blank">Report an Issue</a>
         </li>
         <li>
           <strong>Email:</strong> aziz.f.alhuzami@gmail.com
@@ -219,14 +227,15 @@
   <div class="summary-box">
     <h3>Summary</h3>
     <p>
-      <strong>TL;DR:</strong> BlockIt collects zero data. Everything stays on your device. 
+      <strong>TL;DR:</strong> BlockIt collects zero data. Everything stays on your device.
       No tracking, no analytics, no servers, no cloud. Open source and transparent.
     </p>
   </div>
 
   <div class="footer">
-    <p>© 2026 BlockIt. MIT License. Free & Open Source.</p>
+    <p>&copy; 2026 BlockIt. MIT License. Free &amp; Open Source.</p>
   </div>
 
+  <script src="./static/js/privacy.js"></script>
 </body>
 </html>
